<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:forceDarkAllowed="false"
        tools:context=".fragment.CaregiverFragment_Public"
        tools:targetApi="q">

        <!-- TODO: Update blank fragment layout -->

        <!-- TODO: Update blank fragment layout -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/searchView"
                android:layout_width="300dp"
                android:layout_height="39dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_search_border"
                android:hint="Search by Job title,Name or Price."
                android:inputType="textShortMessage"
                android:paddingStart="5dp"
                android:textColor="@color/grey"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_caregiver"
                android:layout_width="180dp"
                android:layout_height="58dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/marcellus"
                android:text="@string/cg_Line"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchView" />

            <TextView
                android:id="@+id/txt_Location"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/jaldi_bold"
                android:text="@string/search_nearest"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/materialDivider"
                app:layout_constraintEnd_toEndOf="@+id/btn_Location"
                app:layout_constraintStart_toStartOf="@+id/btn_Location"
                app:layout_constraintTop_toBottomOf="@+id/btn_Location"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/txt_AddJob"
                android:layout_width="53dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/jaldi_bold"
                android:text="@string/add_job"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/materialDivider"
                app:layout_constraintEnd_toEndOf="@+id/btn_AddJob"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toStartOf="@+id/btn_AddJob"
                app:layout_constraintTop_toBottomOf="@+id/btn_AddJob"
                app:layout_constraintVertical_bias="0.012" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                app:dividerColor="@color/grey"
                app:dividerThickness="2dp"
                app:layout_constraintBottom_toTopOf="@+id/caregiver_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/caregiver_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="50dp"
                android:foregroundGravity="center"
                android:orientation="vertical"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/materialDivider"
                app:layout_constraintTop_toBottomOf="@+id/materialDivider" />


            <ImageButton
                android:id="@+id/btn_Location"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="@+id/searchView"
                app:layout_constraintHorizontal_bias="0.46"
                app:layout_constraintStart_toEndOf="@+id/txt_caregiver"
                app:layout_constraintTop_toBottomOf="@+id/searchView"
                app:srcCompat="@drawable/location_icon" />

            <ImageButton
                android:id="@+id/btn_AddJob"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="36dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_Location"
                app:layout_constraintTop_toBottomOf="@+id/searchView"
                app:srcCompat="@drawable/addjob_icon" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/txt_caregiver"
                tools:layout_editor_absoluteX="1dp">

                <Button
                    android:id="@+id/jobApprove"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/Approve"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/jobReject"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/Reject"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>